--- a/inventaris/index.html
+++ b/inventaris/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     </header>
-
+<!-- oke boa -->
     <!-- Main Content -->
     <main class="main">
         <div class="container">
